--- a/BeFit/app/src/main/res/values/strings.xml
+++ b/BeFit/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BeFit</string>
+    <string name="home">Home</string>
+    <string name="workout">Workout</string>
+    <string name="health">Health</string>
+    <string name="user">User</string>
+
 </resources>
